--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96aefa">  <td>23/06/15 03:54:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_TC_001.login()[pri:1, instance:com.ecommerce.testCases.Login_TC_001@6302bbb1]">login</td> 
-  <td>TestNG-tests-1@1705203238</td>   <td></td> </tr>
-<tr bgcolor="f984f5">  <td>23/06/15 03:54:36</td>   <td>-5829</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Setup.setup(java.lang.String,java.lang.String)[pri:0, instance:com.ecommerce.testCases.Login_TC_001@6302bbb1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1705203238</td>   <td></td> </tr>
+<tr bgcolor="678e9f">  <td>23/06/30 05:15:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_TC_001.enableShotcuts()[pri:4, instance:com.ecommerce.testCases.Login_TC_001@145f66e3]">enableShotcuts</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="678e9f">  <td>23/06/30 05:15:15</td>   <td>-81</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_TC_001.login()[pri:1, instance:com.ecommerce.testCases.Login_TC_001@145f66e3]">login</td> 
+  <td>TestNG-test=Profile Visit-1@197594791</td>   <td></td> </tr>
+<tr bgcolor="678e9f">  <td>23/06/30 05:15:15</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_TC_001.searchQuery()[pri:3, instance:com.ecommerce.testCases.Login_TC_001@145f66e3]">searchQuery</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="da69a0">  <td>23/06/30 05:15:05</td>   <td>-10063</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Setup.setup(java.lang.String,java.lang.String)[pri:0, instance:com.ecommerce.testCases.Login_TC_001@145f66e3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Profile Visit-1@197594791</td>   <td></td> </tr>
+<tr bgcolor="678e9f">  <td>23/06/30 05:15:15</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_TC_001.visitProfile()[pri:2, instance:com.ecommerce.testCases.Login_TC_001@145f66e3]">visitProfile</td> 
+  <td></td>   <td></td> </tr>
 </table>
